homeautomation/cyberpower/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyber-power
  namespace: homeautomation
spec:
  selector:
    matchLabels:
      app: cyber-power
  template:
    metadata:
      labels:
        app: cyber-power
    spec:
      containers:
        - name: cyber-power
          image: cyber-power
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
            requests:
              memory: "64Mi"
              cpu: "10m"
          ports:
            - containerPort: 8080
              name: http-alt
