homeautomation/cyberpower/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cyber-power
  name: cyber-power
  namespace: homeautomation
spec:
  ports:
    - name: http-alt
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: cyber-power
  sessionAffinity: None
  type: LoadBalancer
