homeautomation/cyberpower/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cyber-power
    app.kubernetes.io/instance: homeautomation
  name: cyber-power
  namespace: homeautomation
spec:
  host: cyber-power.homeautomation.apps.homelab.csfreak.com
  port:
    targetPort: http-alt
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: cyber-power
    weight: 100
  wildcardPolicy: None
